feat: added examples hexo website as breadcrumb playground

--- a/examples/sample-1/_config.yml
+++ b/examples/sample-1/_config.yml
@@ -14,7 +14,7 @@ timezone: "Europe/Amsterdam"
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://localhost:4000
-permalink: "pretty"
+permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -104,6 +104,7 @@ theme: landscape
 deploy:
   type: ""
 
+# Breadcrumb
 breadcrumb:
   homepage:
     title: Home
