--- a/examples/sample-1/themes/landscape/_config.yml
+++ b/examples/sample-1/themes/landscape/_config.yml
@@ -27,11 +27,11 @@ copyright:
 # Sidebar
 sidebar: right
 widgets:
-- category
-- tag
-- tagcloud
-- archive
-- recent_posts
+  - category
+  - tag
+  - tagcloud
+  - archive
+  - recent_posts
 
 # display widgets at the bottom of index pages (pagination == 2)
 index_widgets:
@@ -40,7 +40,7 @@ index_widgets:
 # - archive
 
 # Widget behavior
-archive_type: 'monthly'
+archive_type: "monthly"
 show_count: false
 recent_posts_limits: 5
 
@@ -55,8 +55,8 @@ fb_app_id:
 # valine comment system. https://valine.js.org
 valine:
   enable: false # if you want use valine,please set this value is true
-  appId:  # leancloud application app id
-  appKey:  # leancloud application app key
+  appId: # leancloud application app id
+  appKey: # leancloud application app key
   notify: false # valine mail notify (true/false) https://github.com/xCss/Valine/wiki
   verify: false # valine verify code (true/false)
   pageSize: 10 # comment list page size
