--- a/examples/sample-1/package.json
+++ b/examples/sample-1/package.json
@@ -6,7 +6,7 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server"
+    "server": "npm run clean && hexo server"
   },
   "hexo": {
     "version": "7.0.0"
