--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'  # Ensure this version matches your project's requirements
+          node-version: '20'
 
       - name: Install dependencies
-        run: npm ci  # 'npm ci' is more efficient and reliable for CI/CD environments
+        run: npm ci
 
       - name: Configure Git identity
         run: |
@@ -32,12 +32,12 @@ jobs:
           GITHUB_ACTOR: ${{ github.actor }}
 
       - name: Update Changelog
-        run: npx standard-version --release-as "${{ github.event.pull_request.title }}"
+        run: npx standard-version --release-as "${{ github.event.pull_request.title }}" # Use the PR title as the release version (lowercased, e.g. v1.0.0)
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Include this if your script interacts with GitHub API
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit and Push Changes
         run: |
           git push origin ${{ github.head_ref }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Required for pushing changes
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
