--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,16 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-  "plugins": ["@typescript-eslint", "prettier", "import"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier",
+    "import"
+  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
@@ -18,7 +26,14 @@
     "import/order": [
       "error",
       {
-        "groups": [["builtin", "external", "parent", "index"]],
+        "groups": [
+          [
+            "builtin",
+            "external",
+            "parent",
+            "index"
+          ]
+        ],
         "newlines-between": "always"
       }
     ],
