--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "build:watch": "tsc --watch",
-    "lint": "eslint --ext .ts .",
+    "lint": "eslint .",
     "format": "prettier --write **/*.{ts,md,yml,json}",
     "version": "npm run lint",
     "postversion": "git push && git push --tags"
@@ -33,10 +33,12 @@
   "devDependencies": {
     "@types/hexo": "^3.8.12",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.1",
-    "standard-version": "^9.5.0"
+    "standard-version": "^9.5.0",
+    "typescript": "^5.3.3"
   }
 }
