--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "format": "prettier --write **/*.{ts,md,yml,json}",
     "version": "npm run lint",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -39,7 +40,29 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.3.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "npm run format"
+    ],
+    "*.md": [
+      "npm run format"
+    ],
+    "*.yml": [
+      "npm run format"
+    ],
+    "*.json": [
+      "npm run format"
+    ]
   }
 }
