feat: add delimiter and aria-label for nav

--- a/examples/sample-1/_config.yml
+++ b/examples/sample-1/_config.yml
@@ -106,9 +106,17 @@ deploy:
 
 # Breadcrumb
 breadcrumb:
+  delimiter:
+    # /, >, etc.
+    content: "/"
+    # Applied on ::after pseudo element.
+    style: "font-weight: bold;"
+  aria:
+    nav: "Breadcrumb"
   homepage:
+    # Customize the title for the homepage in the breadcrumb.
     title: Home
-  formats:
+  templates:
     - layout: post
       tokens:
         - home
