--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
     "node": ">=7.5.0"
   },
   "devDependencies": {
-    "@types/hexo": "^3.8.12",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.0.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "typescript": "^5.3.3"
+    "@types/hexo": "3.8.12",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "husky": "9.0.10",
+    "lint-staged": "15.2.2",
+    "typescript": "5.3.3"
   },
   "husky": {
     "hooks": {
