chore: configure Dependabot for security updates on Sundays at 9:00 AM

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,3 +8,8 @@ updates:
     reviewers:
       - "msudgh"
     versioning-strategy: increase
+    production-dependencies:
+      applies-to: "security-updates"
+      dependency-type: "production"
+      time: "09:00"
+      day: "sunday"
