--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,12 +4,16 @@ updates:
     directory: "/"
     schedule:
       interval: "monthly"
-    open-pull-requests-limit: 5
+      time: "09:00"
+      day: "sunday"
+    open-pull-requests-limit: 1
     reviewers:
       - "msudgh"
     versioning-strategy: increase
-    production-dependencies:
-      applies-to: "security-updates"
-      dependency-type: "production"
-      time: "09:00"
-      day: "sunday"
+    allow:
+      - dependency-type: "production"
+    groups:
+      security-update-for-dependencies:
+        applies-to: "security-updates"
+        dependency-type: "production"
+    target-branch: "develop"
